# OOP

./: README.md  pyproject.toml
oop/structured/: Aspirant.py  Bachelor.py  Student.py  test.py
oop/true/: Aspirant.py  Bachelor.py  Student.py  test.py
